修改下项目名称以便区分

--- a/elasticsearch-client/pom.xml
+++ b/elasticsearch-client/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.xcy</groupId>
-    <artifactId>elasticsearch</artifactId>
+    <artifactId>elasticsearch-client</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>elasticsearch</name>
+    <name>elasticsearch-client</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
